# gauge-metacognition

./: .gitignore  README.md  kaggle_description.md  pyproject.toml
datasets/: candidate_pool.csv  final_items.csv  final_items_v2.csv  items_270.py
generators/: factual_gen.py  logic_gen.py  math_gen.py
notebooks/: benchmark_task.py  metacog_full.py  test_models.py
scoring/: calibration.py  composite.py  irt.py
scripts/: generate_final_270.py  generate_pool.py  pilot_v2.py
tasks/: offloading.py  staircase.py  strategy_switch.py
writeup/: writeup.md
